--- a/starview_frontend/src/pages/Bortle/styles.css
+++ b/starview_frontend/src/pages/Bortle/styles.css
@@ -91,7 +91,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: var(--space-xl);
+  gap: calc(var(--space-xl)*3);
   padding: var(--space-xl) var(--space-lg);
 }
 
